<resources>
    <string name="app_name">Atividade01</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_nota">AddNotaActivity</string>
    <string name="bt_add_nota">Adicionar Nota</string>
    <string name="text_nome">Nome</string>
    <string name="text_descricao">Descrição</string>
    <string name="toggle_categoria_turn_on">Sem Categoria</string>
    <string name="toggle_categoria_turn_off">Escolher Categoria</string>
    <string name="title_activity_add_categoria">AddCategoriaActivity</string>
    <string name="text_nome_categoria">Nome Categoria</string>
    <string name="text_EscolherPadrao" />
    <string name="text_EscolherPadrao2">Categoria padrão ?</string>
    <string name="rb_sim">Sim</string>
    <string name="rb_nao">Não</string>
    <string name="btn_add_categoria">Adicionar Categoria</string>
    <string name="tw_nenhuma_nota">Nenhuma Nota</string>
    <string name="nome_categoria">Categoria</string>
</resources>
