<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.ufc.quixada.dspdm.atividade01.activity.AddNotaActivity"
    tools:showIn="@layout/activity_add_nota">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignParentTop="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nome"
            android:layout_weight="0.04"
            android:singleLine="true"
            android:inputType="textUri"
            android:hint="@string/text_nome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descricao"
            android:layout_weight="0.04"
            android:hint="@string/text_descricao" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textAut_Categoria"
            android:hint="@string/nome_categoria"
            android:inputType="textAutoComplete"
            android:layout_weight="0.04" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toggle_sem_categoria"
            android:layout_weight="0.04"
            android:checked="true"
            android:textOff="@string/toggle_categoria_turn_off"
            android:textOn="@string/toggle_categoria_turn_on" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_add_nota"
            android:id="@+id/bt_add_nota"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04" />
    </LinearLayout>
</RelativeLayout>
