<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.ufc.quixada.dspdm.atividade01.activity.AddCategoriaActivity"
    tools:showIn="@layout/activity_add_categoria">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nome"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:hint="@string/text_nome_categoria" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_area_relacionada"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_EscolherPadrao2"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_sim"
            android:id="@+id/radioButton_sim"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_nao"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <Button
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_categoria"
            android:id="@+id/btn_add_categoria"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
